# AmI-Project

./: README.md  report.md
src/: SCHEMA.md
src/CMS/src/: README.md  app.py  controllers.py  db.py  pyproject.toml  routes.py
src/CMS/src/templates/: index.html
src/SMS/src/: README.md  SMS_station.ino  diagram.json  libraries.txt  sketch.ino
